Do not forward the button release event when Shift is also pressed.

BUG: 299437
FIXED-IN: 4.8.4