src/TerminalDisplay.cpp
@@ -2167,8 +2167,9 @@ void TerminalDisplay::mouseReleaseEvent(QMouseEvent* ev)
     }
 
     if (!_mouseMarks &&
-            ((ev->button() == Qt::RightButton && !(ev->modifiers() & Qt::ShiftModifier))
-             || ev->button() == Qt::MidButton)) {
+            (ev->button() == Qt::RightButton || ev->button() == Qt::MidButton ) &&
+              !(ev->modifiers() & Qt::ShiftModifier) ) {
+
         emit mouseSignal(3,
                          charColumn + 1,
                          charLine + 1 + _scrollBar->value() - _scrollBar->maximum() ,
